--- a/index.html
+++ b/index.html
@@ -292,20 +292,39 @@ O cronograma anual prevê fases sequenciais e entregáveis claros: planejamento 
   </p>
 </details>
 
-<!-- FOOTER -->
-<footer>
-  <div class="footer-left">
-    CTB - Clube dos Tenistas da Bahia<br>
-    CNPJ 23.146.328/0001-16<br>
-    Informações institucionais para contato e comunicação oficial.
+<details class="section">
+      <summary>Resumo – Funcionamento da Liga Baiana de Tênis de Mesa</summary>
+      <div class="content">
+O CTB – Clube dos Tenistas da Bahia estrutura e coordena o projeto de implantação e fortalecimento da Liga Baiana de Tênis de Mesa, com foco na captação de atletas [...]
+      </div>
+    </details>
+
   </div>
-  <div class="footer-center">
-    <img src="ctblinkedin.jpg" alt="CTB LinkedIn">
-  </div>
-  <div class="footer-right">
-    <img src="ctb1.png" alt="CTB Logo Alternativa">
-  </div>
-</footer>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-left">
+      CTB - Clube dos Tenistas da Bahia<br>
+      CNPJ 23.146.328/0001-16<br><br>
+
+      <!-- CONTATO INSERIDO -->
+      <strong>Contato:</strong> Paulo Carneiro<br>
+      <strong>WhatsApp:</strong> <a href="https://wa.me/5571985304903" style="color:white;text-decoration:underline;">71-98530-4903</a><br>
+      <strong>E-mail:</strong> <a href="mailto:paulo@ctb-ba.com.br" style="color:white;text-decoration:underline;">paulo@ctb-ba.com.br</a>
+    </div>
+
+    <div class="footer-center">
+      <a href="https://www.linkedin.com/in/paulocarneiropfeira?" target="_blank">
+        <img src="ctblinkedin.jpg" alt="CTB LinkedIn">
+      </a>
+    </div>
+
+    <div class="footer-right">
+      <a href="https://ctb-ba.com.br" target="_blank">
+        <img src="ctb1.png" alt="CTB">
+      </a>
+    </div>
+  </footer>
 
 </div>
 
