--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ O cronograma anual prevê fases sequenciais e entregáveis claros: planejamento 
 <details class="section">
       <summary>Resumo – Funcionamento da Liga Baiana de Tênis de Mesa</summary>
       <div class="content">
-O CTB – Clube dos Tenistas da Bahia estrutura e coordena o projeto de implantação e fortalecimento da Liga Baiana de Tênis de Mesa, com foco na captação de atletas [...]
+O CTB – Clube dos Tenistas da Bahia estrutura e coordena o projeto de implantação e fortalecimento da Liga Baiana de Tênis de Mesa, com foco na captação de atletas, no desenvolvimento esportivo e na sustentabilidade comercial do circuito. Para garantir a qualidade e a padronização das etapas, o CTB realiza a aquisição dos equipamentos esportivos necessários, assegurando uniformidade em todas as sedes. Além disso, promove a capacitação das equipes de gestão e arbitragem, oferecendo formação contínua e atualizada. O projeto também inclui a realização de oficinas de iniciação ao tênis de mesa em escolas públicas dos municípios participantes, ampliando o acesso ao esporte e fortalecendo a base de jovens atletas. O CTB ainda dá suporte direto na organização dos eventos, contribuindo com a identidade visual e a personalização dos ginásios onde as etapas acontecem. Cada cidade integrante da Liga é responsável pela realização de um torneio anual, correspondente à sua etapa no Circuito da Liga. Os municípios recebem 100% do valor das inscrições e têm autonomia para selecionar e disponibilizar a melhor infraestrutura esportiva (ginásios e equipamentos complementares) para a execução do evento, garantindo condições adequadas de competição.
       </div>
     </details>
 
